--- a/css/app.css
+++ b/css/app.css
@@ -9621,9 +9621,134 @@ h3 {
   font-style: normal;
   font-weight: normal;
 }
+.btn-custom {
+  background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
+  border-radius: 2.25rem;
+  padding: 0.775rem 3rem;
+  color: #FFF;
+}
+.btn-custom:hover {
+  color: #FFF;
+  background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
+}
+.btn-custom:focus {
+  color: #FFF;
+  background-image: linear-gradient(45deg, #cf7e98 0%, #4a339c 100%);
+}
+
+.btn-inline-custom, .btn-inline-custom2 {
+  color: #FFF;
+  background-color: #FF3C88;
+  font-size: 16px;
+  border-radius: 1.25rem;
+  padding: 0.375rem 2.78rem;
+  border: 2px solid #FF3C88;
+  font-family: "RubikRegular", sans-serif;
+}
+.btn-inline-custom:hover, .btn-inline-custom2:hover {
+  color: #FFF;
+  border-color: #cd2868;
+  background-color: #cd2868;
+}
+.btn-inline-custom:focus, .btn-inline-custom2:focus {
+  color: #FFF;
+  border-color: #b01e56;
+  background-color: #b01e56;
+}
+
+.btn-inline-custom2 {
+  background-color: #5f26ff;
+  border: 2px solid #5f26ff;
+}
+.btn-inline-custom2:hover {
+  color: #FFF;
+  border-color: #511ce3;
+  background-color: #511ce3;
+}
+.btn-inline-custom2:focus {
+  color: #FFF;
+  border-color: #441aba;
+  background-color: #441aba;
+}
+
+.btn-outline-custom, .btn-outline-custom2 {
+  color: #FF3C88;
+  font-size: 16px;
+  border-radius: 1.25rem;
+  padding: 0.375rem 2.78rem;
+  border: 2px solid #FF3C88;
+  font-family: "RubikRegular", sans-serif;
+}
+.btn-outline-custom:hover, .btn-outline-custom2:hover {
+  color: #FFF;
+  background-color: #FF3C88;
+  border-color: #FF3C88;
+}
+.btn-outline-custom:focus, .btn-outline-custom2:focus {
+  color: #FFF;
+  text-decoration: none;
+  background-color: #ec2874;
+}
+
+.btn-outline-custom2 {
+  color: #5f26ff;
+  border: 2px solid #5f26ff;
+}
+.btn-outline-custom2:hover {
+  color: #FFF;
+  background-color: #511ce3;
+  border-color: #511ce3;
+}
+.btn-outline-custom2:focus {
+  color: #FFF;
+  border-color: #441aba;
+  background-color: #441aba;
+}
+
+.btn-custom-lg {
+  padding: 1rem 8rem;
+  font-size: 24px;
+  border-radius: 2.25rem;
+}
+@media (max-width: 541px) {
+  .btn-custom-lg {
+    padding: 0.5rem 5rem;
+  }
+}
+
+.ch-100 {
+  height: calc(1080px - 95px) !important;
+}
+
+@media (min-width: 992px) {
+  .mr-lg-5 {
+    margin-right: 5rem !important;
+  }
+}
+@media (min-width: 1200px) {
+  .mr-xl-7 {
+    margin-right: 7rem !important;
+  }
+}
+.w-26--after::after {
+  width: 26% !important;
+}
+
+@media (max-width: 991px) {
+  .mt-md-50p {
+    margin-top: 50% !important;
+  }
+}
+.mb-6 {
+  margin-bottom: 4rem !important;
+}
+
+.mt-200x {
+  margin-top: 220px;
+}
+
 body {
-  overflow-x: hidden;
-  font-family: "MontserratRegular", sans-serif;
+  font-family: "MontserratMedium", sans-serif;
   font-size: 16px;
   margin: 0 auto;
   position: relative;
@@ -9631,13 +9756,19 @@ body {
   transition: transform 0.1s ease-in-out;
   transition: transform 0.1s ease-in-out, -webkit-transform 0.1s ease-in-out;
   background-color: #fff;
+  color: #1f2022;
 }
 
 a {
   text-decoration: none;
-  color: #1f2022;
+  color: #FF3C88;
 }
 a:hover {
+  color: #cd2868;
+  text-decoration: none;
+}
+a:focus {
+  color: #b01e56;
   text-decoration: none;
 }
 
@@ -9645,23 +9776,6 @@ a:hover {
   .container {
     max-width: 1170px;
   }
-}
-
-.navbar-brand {
-  margin-right: 6rem;
-}
-@media (max-width: 768px) {
-  .navbar-brand {
-    margin-right: 0;
-  }
-}
-
-.w-26--after::after {
-  width: 26% !important;
-}
-
-.ch-100 {
-  height: calc(1080px - 95px) !important;
 }
 
 .l_header--h1, .l_header--h2 {
@@ -9672,6 +9786,7 @@ a:hover {
   text-align: center;
   text-transform: uppercase;
   margin-bottom: 1.8rem;
+  letter-spacing: 1px;
 }
 @media (max-width: 541px) {
   .l_header--h1, .l_header--h2 {
@@ -9687,6 +9802,12 @@ a:hover {
   .l_header--h1, .l_header--h2 {
     font-size: 30px;
   }
+}
+
+.l_header--h2 {
+  font-family: "MontserratMedium", sans-serif;
+  padding: 0 15%;
+  margin-bottom: 0;
 }
 
 .l_ud {
@@ -9708,75 +9829,8 @@ a:hover {
   }
 }
 
-.l_header--h2 {
-  font-family: "MontserratMedium", sans-serif;
-  padding: 0 15%;
-  margin-bottom: 0;
-}
-
-.mb-6 {
-  margin-bottom: 4rem !important;
-}
-
-.mt-200x {
-  margin-top: 220px;
-}
-
-.btn-custom {
-  background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
-  border-radius: 2.25rem;
-  padding: 0.775rem 3rem;
-  color: #FFF;
-}
-.btn-custom:hover {
-  color: #FFF;
-  background-image: linear-gradient(45deg, #6a11cb 0%, #dd87a3 100%);
-}
-
-.btn-inline-custom {
-  color: #FFF;
-  background-color: #FF398B;
-  font-size: 16px;
-  border-radius: 1.25rem;
-  padding: 0.375rem 2.78rem;
-  border: 2px solid #FF398B;
-  font-family: "RubikRegular", sans-serif;
-}
-
-.btn-inline-custom:hover {
-  color: #FFF;
-  text-decoration: none;
-  background-color: #d20057;
-}
-
-.btn-outline-custom {
-  color: #FF398B;
-  font-size: 16px;
-  border-radius: 1.25rem;
-  padding: 0.375rem 2.78rem;
-  border: 2px solid #FF398B;
-  font-family: "RubikRegular", sans-serif;
-}
-
-.btn-outline-custom:hover {
-  color: #FFF;
-  background-color: #FF398B;
-  border-color: #FF398B;
-}
-
 .navbar-toggler {
   border: 1px solid #fff;
-}
-
-.btn-custom-lg {
-  padding: 1rem 8rem;
-  font-size: 24px;
-  border-radius: 2.25rem;
-}
-@media (max-width: 541px) {
-  .btn-custom-lg {
-    padding: 0.5rem 5rem;
-  }
 }
 
 .bgg {
@@ -9784,63 +9838,31 @@ a:hover {
 }
 .bgg::before {
   content: "";
-  width: 1910px;
+  width: 1977px;
   height: 100%;
   position: absolute;
-  background: url(../images/ilustration.png), url(../images/bg_forms.jpg);
+  background: url(../images/ilustration.svg), url(../images/bg_forms.svg);
   background-position-x: right;
-  background-position: 4% 107%, right bottom;
+  background-position: calc(50% - 367px) 107%, 0 0;
   background-repeat: no-repeat, no-repeat;
   top: 0;
-  left: 237px;
-}
-@media (max-width: 1499px) {
-  .bgg .bgg::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: url(../images/ilustration.png), url(../images/bg_forms2.jpg);
-    background-position-x: right;
-    background-position: 0 109%, 0 bottom;
-    background-repeat: no-repeat, no-repeat;
-    background-size: 100% 66%, 100% 100%;
-    top: 0;
-    right: 0;
-  }
+  left: calc(50% - 348px);
 }
 @media (max-width: 1199px) {
   .bgg::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: url(../images/ilustration.png), url(../images/bg_forms2.jpg);
-    background-position-x: right;
-    background-position: 35% 110%, 0 bottom;
-    background-repeat: no-repeat, no-repeat;
-    background-size: 87% 62%, 100% 100%;
-    top: 0;
-    right: 0;
+    left: calc(50% - 260px);
   }
 }
 @media (max-width: 991px) {
   .bgg::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: url(../images/bg_forms2.jpg);
-    background-position-x: right;
-    background-position: 0 bottom;
-    background-repeat: no-repeat, no-repeat;
-    background-size: 100% 100%;
-    top: 0;
-    right: 0;
+    background: url(../images/bg_forms.svg);
+    background-position: 0 0;
+    left: 50%;
   }
 }
 
 .l_header {
+  overflow-x: hidden;
   position: relative;
 }
 @media (max-width: 991px) {
@@ -9867,6 +9889,8 @@ a:hover {
 .l_header .l_header--navbar .l_header--menu .l_lang .nav-link {
   display: inline-flex;
   background-color: #FFF;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
 }
 .l_header .l_header--navbar .l_header--menu .l_lang .l_current_lang--ru {
   color: #FFF !important;
@@ -9898,9 +9922,15 @@ a:hover {
   color: #cb2879 !important;
 }
 .l_header .l_header--navbar .l_header--menu .nav-item .nav-link {
+  padding-right: 33px;
+  padding-left: 33px;
+  letter-spacing: 3px;
   color: #FFF;
   font-size: 21px;
   text-transform: uppercase;
+}
+.l_header .l_header--navbar .l_header--menu .nav-item .nav-link:hover {
+  color: #cccccc;
 }
 @media (max-width: 991px) {
   .l_header .l_header--navbar .l_header--menu .nav-item .nav-link {
@@ -9914,19 +9944,9 @@ a:hover {
     font-size: 17px;
   }
 }
-@media (min-width: 1200px) {
-  .l_header .l_header--navbar .l_header--menu .nav-item .nav-link {
-    padding-right: 30px;
-    padding-left: 30px;
-    font-size: 21px;
-  }
-}
-.l_header .l_header--navbar .l_header--menu .nav-item .nav-link:hover {
-  color: #cccccc;
-}
 .l_header .l_header--navbar .l_header--menu .nav-item .l_auth__button {
-  background-color: #FF398B;
-  width: 170px;
+  background-color: #ff3c88;
+  width: 165px;
   height: 47px;
 }
 @media (max-width: 1199px) {
@@ -9942,12 +9962,15 @@ a:hover {
 }
 .l_header .l_header--navbar .l_header--menu .nav-item .l_auth__button:hover {
   color: #FFF;
-  background-color: #d20057;
+  background-color: #cd2868;
+}
+.l_header .l_header--navbar .l_header--menu .nav-item .l_auth__button:focus {
+  color: #FFF;
+  background-color: #b01e56;
 }
 .l_header .masthead {
   position: relative;
   overflow: hidden;
-  padding-bottom: 3rem;
   z-index: 2;
 }
 @media (min-width: 768px) {
@@ -9961,11 +9984,6 @@ a:hover {
 .l_header .masthead .masthead-content h1 {
   font-size: 57px;
   font-family: "RubikRegular", sans-serif;
-}
-@media (max-width: 1199px) {
-  .l_header .masthead .masthead-content h1 {
-    font-size: 50px;
-  }
 }
 @media (max-width: 541px) {
   .l_header .masthead .masthead-content h1 {
@@ -10045,15 +10063,16 @@ a:hover {
   margin-top: 20px;
 }
 .l_tariff .l_tariff--content .l_card--premium {
-  background: #FFF url(../images/tariff_bg_element.png) no-repeat 100% top;
+  background: #FFF url(../images/tariff_bg_element.svg) no-repeat 100% top;
 }
 .l_tariff .l_tariff--content .card .card-body .card-title {
   color: #BD90E4;
-  margin-top: 20px;
+  margin-top: 25px;
   text-align: center;
   border-bottom: 1px solid #F6EDFC;
   padding-bottom: 33px;
   font-weight: bold;
+  font-size: 24px;
   text-transform: uppercase;
 }
 .l_tariff .l_tariff--content .card .card-body .l_tar-title--free {
@@ -10095,11 +10114,11 @@ a:hover {
 .l_tariff .l_tariff--content .card .l_tar-footer {
   margin-top: 20px;
 }
-.l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom {
+.l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom, .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom2 {
   color: #1a2547;
   border-color: #1a2547;
 }
-.l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom:hover {
+.l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom:hover, .l_tariff .l_tariff--content .card .l_tar-footer--free .btn-outline-custom2:hover {
   color: #FFF;
   background-color: #1a2547;
   border-color: #1a2547;
@@ -10127,7 +10146,7 @@ a:hover {
 }
 .l_tariff .l_tariff--footer::after {
   content: "";
-  background: url(../images/tariff_illustration.png) no-repeat 70% bottom;
+  background: url(../images/tariff_illustration.svg) no-repeat 70% bottom;
   width: 232px;
   height: 510px;
   position: absolute;
@@ -10136,7 +10155,7 @@ a:hover {
 }
 
 .l_feedback {
-  background: url(../images/feedback_Illustration.png), url(../images/feedback_bg1.png), url(../images/feedback_bg2.png);
+  background: url(../images/feedback_Illustration.svg), url(../images/feedback_bg1.svg), url(../images/feedback_bg2.svg);
   background-position: 59% 120%, left top, right bottom;
   background-repeat: no-repeat;
   background-color: #EDEFFF;
@@ -10156,14 +10175,6 @@ a:hover {
 }
 .l_feedback .l_header--h2 {
   font-family: RubikBold, sans-serif;
-}
-.l_feedback .btn-inline-custom {
-  color: #FFF;
-  background-color: #6D21FF;
-  border-color: #6D21FF;
-}
-.l_feedback .btn-inline-custom:hover {
-  background-color: #2e0087;
 }
 .l_feedback .l_feedback--msg {
   margin-top: 55px;
@@ -10185,7 +10196,7 @@ a:hover {
 }
 .l_feedback .l_feedback--msg::before {
   content: "";
-  background: url(../images/feedback_Icon.png) no-repeat center;
+  background: url(../images/feedback_Icon.svg) no-repeat center;
   position: absolute;
   width: 45px;
   height: 55px;
@@ -10202,6 +10213,13 @@ a:hover {
 .l_footer {
   margin-top: 40px;
   line-height: 2rem;
+}
+.l_footer a {
+  color: #1f2022;
+}
+.l_footer a:hover {
+  color: #6244c9;
+  font-family: MontserratMedium, sans-serif;
 }
 .l_footer ul {
   list-style: none;
