--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,10 +24,12 @@ a {
   text-decoration: none;
   //color: #1f2022;
   color: #FF3C88;
+
   &:hover {
     color: #cd2868;
     text-decoration: none;
   }
+
   &:focus {
     color: #b01e56;
     text-decoration: none;
@@ -69,6 +71,7 @@ a {
 
 .l_ud {
   z-index: 10;
+
   &::after {
     content: "";
     position: absolute;
@@ -85,13 +88,14 @@ a {
 }
 
 
-.navbar-toggler{
+.navbar-toggler {
   border: 1px solid #fff;
 }
 
 
 .bgg {
   position: relative;
+
   &::before {
     content: "";
     width: 1977px;
@@ -104,6 +108,7 @@ a {
     top: 0;
     left: calc(50% - 348px);
   }
+
   @media (max-width: 1199px) {
     &::before {
       left: calc(50% - 260px);
@@ -123,6 +128,7 @@ a {
 .l_header {
   overflow-x: hidden;
   position: relative;
+
   .l_header--navbar {
     @media (max-width: 991px) {
       width: 85vw;
@@ -133,11 +139,13 @@ a {
     @media (max-width: 568px) {
       width: 95vw;
     }
+
     .l_header--menu {
       font-family: 'MontserratMedium', sans-serif;
       @media (max-width: 991px) {
-        background: rgba(255,255,255, 1);
+        background: rgba(255, 255, 255, 1);
       }
+
       .l_lang {
         .nav-link {
           display: inline-flex;
@@ -184,9 +192,11 @@ a {
           color: #FFF;
           font-size: 21px;
           text-transform: uppercase;
+
           &:hover {
             color: darken(#FFF, 20%);
           }
+
           @media (max-width: 991px) {
             color: #000;
           }
@@ -201,6 +211,7 @@ a {
           background-color: #ff3c88;
           width: 165px;
           height: 47px;
+          text-transform: none;
           @media (max-width: 1199px) {
             width: 135px;
             height: 41px;
@@ -213,6 +224,7 @@ a {
             color: #FFF;
             background-color: #cd2868;
           }
+
           &:focus {
             color: #FFF;
             background-color: #b01e56;
@@ -221,6 +233,7 @@ a {
       }
     }
   }
+
   .masthead {
     position: relative;
     overflow: hidden;
@@ -242,6 +255,7 @@ a {
         @media (max-width: 541px) {
           font-size: 40px;
         }
+
         .bold {
           font-family: 'RubikMedium', sans-serif;
         }
@@ -260,11 +274,24 @@ a {
 }
 
 .l_capability {
-  background-position-x: right;
   height: 100%;
-  background: #EDEFFF url(../images/element.png) no-repeat 97% bottom;
   padding-top: 40px;
-  background-size: 279px;
+  background-color: #EDEFFF;
+  position: relative;
+  overflow: hidden;
+  .container {
+    position: relative;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -17%;
+      left: 98%;
+      width: 358px;
+      z-index: 5;
+      height: 770px;
+      background: url(../images/element.png) no-repeat;
+    }
+  }
 
   .l_cap--card {
     font-family: 'MontserratMedium', sans-serif;
@@ -313,16 +340,29 @@ a {
 .l_tariff {
   background-color: #F8FBFC;
   padding-top: 55px;
+  z-index: 20;
+  position: relative;
 
   .l_tariff--content {
     background-color: #FFF;
     margin-top: 20px;
 
+    .l_card--free{
+      @media (min-width: 993px) {
+        border-radius: 8px 0 0 8px !important;
+      }
+    }
     .l_card--premium {
       background: #FFF url(../images/tariff_bg_element.svg) no-repeat 100% top;
+      @media (min-width: 992px) {
+        border-radius: 0 8px 8px 0 !important;
+      }
     }
-
     .card {
+      border: none;
+      box-shadow: 0 13px 51px 0 rgba(68, 72, 230, 0.06);
+      border-right: 1px solid #F6EDFC;
+      border-radius: unset;
       .card-body {
         .card-title {
           color: #BD90E4;
@@ -406,24 +446,28 @@ a {
 
   .l_tariff--footer {
     position: relative;
-    margin-top: 140px;
+    margin-top: 145px;
     background-color: #612ADE;
     color: #FFF;
-    padding-top: 45px;
+    padding-top: 40px;
     padding-bottom: 45px;
 
     .l_tariff-footer--content {
       position: relative;
       z-index: 23;
+
       .l_tariff--msg {
         font-size: 23px;
         word-spacing: 6px;
+        margin: 4px 0;
+        font-family: "MontserratRegular", sans-serif;
       }
 
       .l_tariff-callback--msg {
         font-size: 23px;
         word-spacing: 6px;
         font-family: MontserratBold, sans-serif;
+        margin-bottom: 30px;
       }
     }
 
@@ -435,7 +479,9 @@ a {
       position: absolute;
       right: 9%;
       bottom: -100px;
-
+      @media (max-width: 1200px) {
+        content: none;
+      }
     }
   }
 }
@@ -456,10 +502,12 @@ a {
 
   .l_header--h1 {
     font-family: MontserratMedium, sans-serif;
+    margin-bottom: 15px;
   }
 
   .l_header--h2 {
     font-family: RubikBold, sans-serif;
+    margin-bottom: 10px;
   }
 
   .l_feedback--msg {
@@ -475,6 +523,7 @@ a {
       font-size: 15px;
       margin-top: 80px;
     }
+
     &::before {
       content: "";
       background: url(../images/feedback_Icon.svg) no-repeat center;
@@ -495,10 +544,11 @@ a {
   margin-top: 40px;
   line-height: 2rem;
 
-  a{
+  a {
     color: #1f2022;
-    &:hover{
-      color:  #6244c9;
+
+    &:hover {
+      color: #6244c9;
       font-family: MontserratMedium, sans-serif;
     }
   }
