--- a/src/scss/button.scss
+++ b/src/scss/button.scss
@@ -1,5 +1,6 @@
 .btn-custom {
   background-image: linear-gradient(45deg, #dd87a3 0%, #6a11cb 100%);
+  box-shadow: 0px 0px 29.64px 8.36px rgba(116, 27, 200, 0.15);
   border-radius: 2.25rem;
   padding: 0.775rem 3rem;
   color: #FFF;
@@ -94,7 +95,7 @@
 
 .btn-custom-lg {
   padding: 1rem 8rem;
-  font-size: 24px;
+  font-size: 23px;
   border-radius: 2.25rem;
   @media (max-width: 541px) {
     padding: 0.5rem 5rem;
